<resources>
    <string name="app_name">VideoJournal</string>
    <string name="menu_title">title</string>
    <string name="notes_title">Notes:</string>
    <string name="recording_title_hint">Recording Title</string>
    <string name="song_title_hint">Song Title</string>
    <string name="enter_notes_hint">Enter Notes</string>
    <string name="save_button">Save Recording</string>

    <string name="transition_photo">Transition Photo</string>
    <string name="transition_title">Transition Title</string>
    <string name="transition_date">Transition Date</string>
    <string name="transition_card">Transition Card</string>

    <string name="delete_menu_item">Delete</string>
    <string name="editor_preview">PREVIEW</string>
    <string name="recording_list_header">Recordings:</string>
    <string name="recorded">Recorded</string>

</resources>
