<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_item_card"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:background="@color/white"
    android:transitionName="@string/transition_card">

    <android.support.v7.widget.CardView
        android:id="@+id/thumbnail_card"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:elevation="0dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:transitionName="@string/transition_photo"
            tools:background="@mipmap/nature_1080x1920" />

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/recording_title"
        style="@style/ListItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:maxLines="1"
        android:outlineProvider="none"
        android:transitionName="@string/transition_title"
        app:layout_constraintStart_toEndOf="@id/thumbnail_card"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="Recording Title" />

    <TextView
        android:id="@+id/date"
        style="@style/ListItemSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="@string/transition_date"
        app:layout_constraintStart_toStartOf="@id/recording_title"
        app:layout_constraintTop_toBottomOf="@id/recording_title"
        tools:text="10/10/2019" />

</android.support.constraint.ConstraintLayout>


