<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey">

    <FrameLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:clickable="true"
        android:transitionName="@string/transition_card"
        app:cardCornerRadius="6dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recording_title"
        style="@style/ListItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="12dp"
        android:elevation="6dp"
        android:maxLines="1"
        android:outlineProvider="none"
        android:transitionName="@string/transition_title"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintTop_toTopOf="@id/card"
        tools:text="Recording Name" />

    <TextView
        android:id="@+id/date"
        style="@style/ListItemSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:maxLines="1"
        android:outlineProvider="none"
        android:transitionName="@string/transition_date"
        app:layout_constraintBottom_toBottomOf="@+id/recording_title"
        app:layout_constraintEnd_toEndOf="@+id/card"
        tools:text="Sat, Oct 19 19" />

    <FrameLayout
        android:id="@+id/video_pane"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        app:layout_constraintBottom_toBottomOf="@id/card"
        app:layout_constraintEnd_toEndOf="@id/card"
        app:layout_constraintStart_toStartOf="@id/card"
        app:layout_constraintTop_toBottomOf="@id/date">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/placeholder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:transitionName="@string/transition_photo" />

            <com.armpatch.android.videojournal.screens.watch.RecordingVideoView
                android:id="@+id/videoview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerInside" />

            <com.armpatch.android.videojournal.screens.watch.ExpandingImageView
                android:id="@+id/play_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_play"
                android:visibility="invisible"
                tools:visibility="visible" />

            <com.armpatch.android.videojournal.screens.watch.ExpandingImageView
                android:id="@+id/pause_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_pause"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:visibility="visible" />

        </android.support.constraint.ConstraintLayout>

    </FrameLayout>


</android.support.constraint.ConstraintLayout>