<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/videoview_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/videoview_layout"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/recording_title"
            style="@android:style/Widget.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:hint="@string/recording_title_hint"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_margin="8dp"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/notes_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/title_layout"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:drawable/editbox_background_normal">

        <TextView
            android:id="@+id/notes_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notes_title"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notes_title"
            android:gravity="top|start"
            android:hint="@string/enter_notes_hint"
            android:inputType="text"
            android:maxHeight="150dp"
            android:nextFocusDown="@id/create_button"
            android:textSize="15sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/create_button"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_below="@id/notes_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:focusable="true"
        android:text="@string/create_button" />

</RelativeLayout>