<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/recording_viewer_background"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        >

        <android.support.v7.widget.CardView
            android:id="@+id/thumbnail_container"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                android:foreground="@color/thumbnail_preview_foreground"
                android:scaleType="centerCrop" />

            <EditText
                android:id="@+id/recording_title"
                style="@style/ListTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"

                android:background="@drawable/rounded_rectangle_scrim"
                android:backgroundTint="@android:color/white"
                android:hint="@string/recording_title_hint"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:padding="6dp"

                />

        </android.support.v7.widget.CardView>

        <RelativeLayout
            android:id="@+id/notes_layout"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_below="@id/thumbnail_container"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:drawable/editbox_background_normal">

            <TextView
                android:id="@+id/notes_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notes_title"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/notes_title"
                android:background="@android:color/white"
                android:gravity="top|start"
                android:hint="@string/enter_notes_hint"
                android:inputType="text"
                android:maxHeight="150dp"
                android:nextFocusDown="@id/create_button"
                android:textSize="15sp" />

        </RelativeLayout>

    </LinearLayout>









    <Button
        android:id="@+id/create_button"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="8dp"
        android:text="@string/create_button"
        android:textSize="16sp"
        android:backgroundTint="@color/colorAccent"
        />

</FrameLayout>